# CurbDetection

./: README.md  opencv4.6_x86_install_20240301.sh
CurbDetection/: CMakeLists.txt  VideoPlayer.h  curbDetect.h  curbDetection.cpp  define.h  main.cpp
Sources/: 1.avi  2023154099张三Task2.doc
